Refactor request handler and add initial auth capabilities